--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.tixForm {
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.jumbotron {
+  color:rgb(141, 248, 240);
+  text-align: right;
+  background-image: url(./img/jonas-jacobsson-MLSS52p0ze4-unsplash.jpg);
+  height: 376px;
+  width: auto;
+}
+
+.jumbotron h1 {
+margin-top: 10%;
+}
